# yew-pong

./: Cargo.toml  README.md  package.json  rollup.config.js
scss/: pong.scss
src/: lib.rs  main.rs
static/: index.html
